RestaurantManagement/src/objects/Ingredient__c.object
<CustomObject>
    <fields>
        <fullName>FoodItem__c</fullName>
        <label>Food Item</label>
        <referenceTo>Food_Item__c</referenceTo>
        <relationshipLabel>Ingredients</relationshipLabel>
        <relationshipName>Ingredients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Grocery__c</fullName>
        <label>Grocery</label>
        <referenceTo>Grocery__c</referenceTo>
        <relationshipLabel>Ingredients</relationshipLabel>
        <relationshipName>Ingredients</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity of the Grocery required in the specific recipe</description>
        <label>Quantity</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Ingredient</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Ingredient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ingredients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>